# kiran-panel

./: ChangeLog  Makefile.am  Makefile.in  README  README.en.md  README.md  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
applets/: Makefile.am  Makefile.in
applets/clock/: Makefile.am  Makefile.in  clock-marshallers.c  clock-marshallers.h  clock-resources.c  clock-typebuiltins.c  clock-typebuiltins.h  clock.c  clock.h  org.kiran.panel.applet.ClockAppletFactory.service.in  org.kiran.panel.applet.clock.gschema.xml.in  org.mate.panel.ClockApplet.mate-panel-applet.in.in
applets/clock/pixmaps/: Makefile.in
applets/fish/: Makefile.am  Makefile.in  fish-resources.c  fish.c  org.kiran.panel.applet.FishAppletFactory.service.in  org.kiran.panel.applet.fish.gschema.xml.in  org.mate.panel.FishApplet.mate-panel-applet.in.in
applets/notification_area/: Makefile.am  Makefile.in  main.c  main.h  na-grid.c  na-resources.c  na-resources.h  org.kiran.panel.applet.NotificationAreaAppletFactory.service.in  org.kiran.panel.applet.notification-area.gschema.xml.in  org.mate.panel.NotificationAreaApplet.mate-panel-applet.in.in  testtray.c
applets/notification_area/libstatus-notifier-watcher/: Makefile.in  gf-sn-watcher-v0-gen.c  gf-sn-watcher-v0-gen.h
applets/notification_area/status-notifier/: Makefile.in  sn-dbus-menu-gen.c  sn-dbus-menu-gen.h  sn-host-v0-gen.c  sn-host-v0-gen.h  sn-item-v0-gen.c  sn-item-v0-gen.h  sn-item-v0.c  sn-watcher-v0-gen.c  sn-watcher-v0-gen.h
applets/notification_area/system-tray/: Makefile.in  na-tray-child.c
applets/wncklet/: Makefile.am  Makefile.in  org.kiran.panel.applet.WnckletFactory.service.in  org.kiran.panel.applet.window-list.gschema.xml.in  org.kiran.panel.applet.workspace-switcher.gschema.xml.in  org.mate.panel.Wncklet.mate-panel-applet.in.in  showdesktop.c  window-list.c  wncklet-resources.c  workspace-switcher.c
data/: Makefile.am  Makefile.in  org.kiran.panel.gschema.xml.in  org.kiran.panel.menubar.gschema.xml.in  org.kiran.panel.object.gschema.xml.in  org.kiran.panel.toplevel.gschema.xml.in  org.mate.panel.gschema.xml.in  org.mate.panel.object.gschema.xml.in  unikylin.layout
data/theme/: Makefile.in
doc/: Makefile.in
doc/reference/: Makefile.in
doc/reference/mate-panel-applet/: Makefile.am  Makefile.in
help/: Makefile.in
help/mate-clock/: Makefile.am  Makefile.in
help/mate-clock/af/: index.docbook
help/mate-clock/am/: index.docbook
help/mate-clock/ar/: index.docbook
help/mate-clock/as/: index.docbook
help/mate-clock/ast/: index.docbook
help/mate-clock/az/: index.docbook
help/mate-clock/be/: index.docbook
help/mate-clock/bg/: index.docbook
help/mate-clock/bn/: index.docbook
help/mate-clock/bn_IN/: index.docbook
help/mate-clock/br/: index.docbook
help/mate-clock/bs/: index.docbook
help/mate-clock/ca/: index.docbook
help/mate-clock/ca@valencia/: index.docbook
help/mate-clock/cmn/: index.docbook
help/mate-clock/crh/: index.docbook
help/mate-clock/cs/: index.docbook  (+1 more)
help/mate-fish/: Makefile.am  Makefile.in
icons/: Makefile.in
icons/16x16/: Makefile.am  Makefile.in
icons/22x22/: Makefile.am  Makefile.in
icons/24x24/: Makefile.am  Makefile.in
icons/32x32/: Makefile.am  Makefile.in
icons/48x48/: Makefile.am  Makefile.in
icons/scalable/: Makefile.am  Makefile.in
libmate-panel-applet/: Makefile.am  Makefile.in  libkiranpanelapplet-4.0-uninstalled.pc.in  libkiranpanelapplet-4.0.pc.in  mate-panel-applet-factory.c  mate-panel-applet-gsettings.h  mate-panel-applet.c  mate-panel-applet.h  panel-applet-private.h
man/: Makefile.am  Makefile.in
mate-panel/: Makefile.am  Makefile.in  applet.c  button-widget.c  kiran-panel.desktop.in  launcher.c  main.c  menu.c  panel-applet-frame.c  panel-applet-frame.h  panel-config-global.c  panel-context-menu.c  panel-context-menu.h  panel-ditem-editor.c  panel-icon-names.h  panel-layout.c  panel-menu-items.c  panel-profile.c  panel-run-dialog.c  panel-schemas.h  panel-separator.c  panel-stock-icons.h  panel-toplevel.c  panel-util.c  panel.c  panel.gresource.xml  panel.h
mate-panel/libegg/: Makefile.in
mate-panel/libmate-panel-applet-private/: Makefile.in  panel-applet-container.c  panel-applet-frame-dbus.c
mate-panel/libpanel-util/: Makefile.in
mate-panel/wayland-protocols/: Makefile.in  wlr-layer-shell-unstable-v1-client-protocol.h  wlr-layer-shell-unstable-v1-protocol.c  xdg-shell-client-protocol.h
po/: LINGUAS  bo_CN.po  zh_CN.po
(+268 files in other folders)
